tests/core/ill-typed/unexpected-lambda/bad-succ-2.stella
language core;

fn main(x : Nat) -> Nat {
    return succ(fn(x : Nat) { return 0; });
}